--- a/serial/paper9/paper7.tex
+++ b/serial/paper9/paper7.tex
@@ -3,7 +3,7 @@
 \usepackage{iclr2025_conference}
 \usepackage{times}
 
-\iclrfinalcopy
+%\iclrfinalcopy
 
 % Optional math commands from https://github.com/goodfeli/dlbook_notation.
 \input{math_commands.tex}
@@ -11,6 +11,7 @@
 
 \graphicspath{{media/}}  % organize your images and other figures under media/ folder
 \usepackage{url}
+\usepackage{datetime}
 
 
 \title{Artificial Intelligence Framework: Toward the notion of AGI}
@@ -44,7 +45,7 @@ Hanoi, Vietnam\\
 \maketitle
 
 \begin{abstract}
-    For a long time, there exists the debate on whether the world is approaching the fundamental point of "Singularity", as per the creation of an artificial general intelligence (AGI) in various forms, both in popular social phenomena and in research society. Just how much is this true? 
+    Within the scope of this paper\footnote{The paper is not finished, this is the latest draft as of \today\ at \currenttime, will be uploaded to at least arxiv later.}, we argue that artificial general intelligence cannot emerge from current neural network paradigms regardless of scale, nor such approach is healthy for the field at present. Drawing on various notions, discussion, present-day development and observations, current debates and critiques, experiments and so on in between philosophy, including Chinese Room Argument and Godelian argument, neuroscientific idea, computer science, the theoretical consideration of artificial intelligence, and learning theory, we address conceptually that neural networks are architecturally insufficient for genuine understanding. They operate as static function approximators of a limited encoding framework - a `sophisticated sponge' exhibiting complex behaviours without structural richness that constitute intelligence. We critique the theoretical foundations the field relies on and created of recent time, for example, an interesting heuristic as \textit{neural scaling law} (for example, \cite{kaplan2020scalinglawsneurallanguage}) made prominent in a wrong way of interpretation, he Universal Approximation Theorem addresses the wrong level of abstraction, and in parts, partially, the question of current architectures lacking dynamic restructuring capabilities. We propose a framework distinguishing existential facilities (computational substrate) from architectural organization (interpretive structures), and outline principles for what genuine machine intelligence would require, and furthermore, an conceptual method of structuralize the richer framework on which the principle of neural network system takes hold. Such is then of conclusion, that the field's repeated AGI predictions fail not from insufficient compute, but from fundamental misunderstanding of what intelligence demands structurally. 
 \end{abstract}
 
 Large Language Model, or LLM (\cite{vaswani2017attention,devlin2019bert,brown2020language,zhao2023llmsurvey,zhao2024llmsurvey2,radford2019language,radford2018improving,raffel2020exploring,touvron2023llama,touvron2023llama2,chowdhery2022palm,ouyang2022training,wei2022chain,kaplan2020scaling,hoffmann2022training,bai2022constitutional}) is one of the most successful, most advanced, and most developed type of model in the current modern machine learning landscape, and of AI (Artificial Intelligence) research at large. Its success has not been lacking, and its reputation and widespread uses have been proved over time. The effect of LLM has been realized, and indeed has been changing the landscape of society in a very much difficult way. Latest model of such architecture, like \cite{openai_gpt5_2025,wang2025capabilitiesgpt5multimodalmedical,openai_inside_gpt5_2025} GPT-5, \cite{guo_deepseek_r1_2025,deepseek_hf_2025}'s DeepSeek AI, \cite{anthropic_claude3_modelcard_2024,anthropic_tracing_thoughts_2025}'s Claude AI, \cite{touvron_llama_2023}'s LLaMA, \cite{chowdhery_palm_2022,anil_palm2_2023}'s PaLM / PaLM-2, and \cite{jiang_mistral7b_2023,mistral_blog_2023}'s Mistral (Mistral-7B), pushed this boundary further and further, and levelling up many tasks and purposes with AI system in practice, and further onward with techniques like \cite{wei2022chain}'s \textit{Chain-of-Thought prompting}, \cite{kaplan2020scaling}'s scaling law, and more (\cite{hoffmann2022training,bai2022constitutional}).
@@ -324,12 +325,12 @@ m_v^{(k)} &= \psi^{(k)}\!\left(\{\, M^{(k)}(h_v^{(k)},\, h_u^{(k)},\, e_{uv}) \m
 h_v^{(k+1)} &= U^{(k)}\!\left(h_v^{(k)},\, m_v^{(k)}\right),
 \end{aligned}
 \end{equation}
-Where $e_{uv}$ represents the edge features, if any, $h^{(k)}_{v}$ is the embedding of node $v$ at layer $k$, $\mathcal{N}(v)$ denotes the neighbours of $v$, $M^{(k)}$ denotes the message function producing messages from neighbours, $U^{(k)}$ denotes the update function, and $\psi^{(k)}(\cdot)$ denotes the message aggregation up to layer $k$ or such node in consideration. Even though GNN of such `rigorous' in a sense framework can be used in a variety of sessions, being restricted to such neural network framework brings extraordinary drawbacks. For example, the expressive power on the native graph data is at best, equivalent to 1-dimensional Weisfeiler-Leman (1-WL) test. Such message passing scheme often fails because of the bottlekneck problem intrinsic within the framework requirement and complex backpropagation adaptation, as seen in \cite{alon2021bottleneckgraphneuralnetworks}. Further problems like structural information losses, scalability problems, trainability issues, over-smoothing, ontological structural mismatch, and so on, as seen in \cite{NEURIPS2019_bb04af0f}. Internally of the neural network framework, such problem is not restricted to such adaptation, which requires both complex restructuring and architectural mapping, but also problems like the parity or memory-sample problem in statistical query model (\cite{blum2003noise,garg2021memory}), planted clique problem (\cite{barak2016nearly}), worst-case analysis indication of neural network being NP-complete or $\exists\mathbb{R}$-complete (\cite{blum1992training,abrahamsen2021existential}) for low-level, 3-node, 2-layer configuration, computational problem and its expressibility (\cite{eldan2016power,telgarsky2016benefits,siegelmann1991turing,weiss2018practical}). Perhaps more interestingly, is the actuated and controversial No Free Lunch theorem from \cite{wolpert1997nofree}, of which basically states that a "structural-less", or naively defined structural copulative information, construction on the encoding scheme, is equally bad as with any given model of arbitrary sense, and also the learning procedure associated with such. Setting this up with respect to a particular set of preset inductive bias, or structural assumptions thereof, scaling exorbitantly both of components, parameters, and repeated structures like typical deep learning structure, is not feasible and reduce its success to uncertainty, as the stronger, relative-NFL theorem takes effect --- given arbitrary structural information as the origin, there then exists, particularly, certain point of which without further information introduced to the setting, the supposed `information' can be reiterated as misleading, thus average out the model's evaluation and performance. 
+Where $e_{uv}$ represents the edge features, if any, $h^{(k)}_{v}$ is the embedding of node $v$ at layer $k$, $\mathcal{N}(v)$ denotes the neighbours of $v$, $M^{(k)}$ denotes the message function producing messages from neighbours, $U^{(k)}$ denotes the update function, and $\psi^{(k)}(\cdot)$ denotes the message aggregation up to layer $k$ or such node in consideration. Even though GNN of such `rigorous' in a sense framework can be used in a variety of sessions, being restricted to such neural network framework brings extraordinary drawbacks. For example, the expressive power on the native graph data is at best, equivalent to \textbf{1-dimensional Weisfeiler-Leman (1-WL) test}. Such message passing scheme often fails because of the bottleneck problem intrinsic within the framework requirement and complex backpropagation adaptation, as seen in \cite{alon2021bottleneckgraphneuralnetworks}. Further problems like structural information losses, scalability problems, trainability issues, over-smoothing, ontological structural mismatch, and so on, as seen in \cite{NEURIPS2019_bb04af0f}. Internally of the neural network framework, such problem is not restricted to such adaptation, which requires both complex restructuring and architectural mapping, but also problems like the parity or memory-sample problem in statistical query model (\cite{blum2003noise,garg2021memory}), planted clique problem (\cite{barak2016nearly}), worst-case analysis indication of neural network being NP-complete or $\exists\mathbb{R}$-complete (\cite{blum1992training,abrahamsen2021existential}) for low-level, 3-node, 2-layer configuration, computational problem and its expressibility (\cite{eldan2016power,telgarsky2016benefits,siegelmann1991turing,weiss2018practical}). Perhaps more interestingly, is the actuated and controversial No Free Lunch theorem from \cite{wolpert1997nofree}, of which basically states that a "structural-less", or naively defined structural copulative information, construction on the encoding scheme, is equally bad as with any given model of arbitrary sense, and also the learning procedure associated with such. Setting this up with respect to a particular set of preset inductive bias, or structural assumptions thereof, scaling exorbitantly both of components, parameters, and repeated structures like typical deep learning structure, is not feasible and reduce its success to uncertainty, as the stronger, relative-NFL theorem takes effect --- given arbitrary structural information as the origin, there then exists, particularly, certain point of which without further information introduced to the setting, the supposed `information' can be reiterated as misleading, thus average out the model's evaluation and performance. 
 
 Aside from some archetype of learning, for example, online learning of which keep dynamically update the model in a sense, generally, neural network and such type of parameterized models are \textit{static}. They act, just as CRA indicted, to be an algorithmic machine only, of which fits to a description, to a task, to a given degree of accuracy within certain manually designed encoded space, manually designed objective, limited or no interpretation of the scheme itself (classification machines think in numerics and matching errors, thus would not know what a cat is, but only know that an object named \texttt{0x0AB4} must be evaluated in some way that can be optimized and reduced). The operating stream itself of the neural network is limited, as we can say of the feed-forward scheme. The extension that neural network is configured to is limited, and lest to say that the neural network scheme itself is underdeveloped, ultimately relies on the simplest possible modelling structure to then give rise to a multitude of different architectures of date. Computational optimization and layer-optimization, practically constrained structures further hampers down such understanding of the neural network itself, as nobody knows what happen in the neural network, less to try adapting it to different situations. 
 
 Go for technicality, neural network architecture of itself faces several increasingly difficult dilemma. Let us disregard the problem of Neural Scaling Law, \cite{kaplan2020scalinglawsneurallanguage}, as it is simply an empirical optimization observation hyped of its wording\footnote{Of the Neural Scaling Law, conceptually, the result is purely empirical on deviation from regular norm, which is expressed by $$L(N,D,C)\propto (N^{\alpha}D^{\beta}C^{\gamma})^{-\eta}$$ Where $L$ is the loss, $N$ being model parameters, $D$ is the dataset size, $C$ being the compute used, and $\eta$ is an empirically fitted exponent. Plotting such relation into logarithmic scale gives roughly the linear relation that is typically seen in literatures and news context.The apparent `law' only emerges because it is plotted on log-log axes. Almost any monotonically diminishing function can be made to look linear on a log plot over a limited range. The law itself also only empirically states such relation without the underlying mechanics or assumptions that would make it a technical `law', and is purely empirical observation. In practice, achieving near-zero error is fairly normal, and within such structure, there exists no framework to indict that the neural scaling law holds any value aside from interesting engineering heuristics. Indeed, perhaps, after it is published, many papers were born dedicated to question or beating such argument, such as \cite{sorscher2023neuralscalinglawsbeating,ivgi-etal-2022-scaling,su2024unravelingmysteryscalinglaws,lee2025neuralscalinglawsleading}, and \cite{doi:10.1073/pnas.2311878121}. Therefore, it is not worth it of such analysis.}, the theoretical ground on which neural network is born from, and the empirical method it employs to advance ever since, face problems regarding interpretability, structural effectiveness or definition, phenomena explanations, uncontrollable behaviours, black-box restrictions, rigidness of architecture, uncertainty and vanishing problems, overloading problems, and so on. Interpretation is the largest problem with such theoretical and both heuristic treatment, as no one understand what lies underneath such system and the operation that births such result observed or tasked itself. Explainable AI, like presented in \cite{hsieh2024comprehensiveguideexplainableai}, was created to counter such issue, still cannot work or cannot make substantial advancements aside from careful manual designs and limited domain analysis, which in an unfair bit of comparison, go back to the time of symbolic AI approach. This is even worse for neural network, as the regular wisdom is that no one understands the operation of hidden layers and all, in any given setting, aside from which you reduce it to very small size like a perceptron or so. Theoretical development toward such is also slow, and often simplify it to mathematical object to be analysed too rigorously, losing the essence of the architecture in the mathematics rigours. This is particular event or rather pattern that we unfortunately stretched to the previous section on learning theory. Often see in learning theory development, or machine learning theory in general - the `\textbf{mathification}' of a theory is a problem that somewhat plagues papers and researches on machine learning topics. Even though we need mathematics on either end, the approach is impractical or simply wrong, believing mathematics to be the singular thing that defines learning theory. This has many fallacies that can then be attributed to a lot of factors and whatnot, of several factors that plague this analysis even further than just the problem of double descent. For now, 
-\begin{enumerate}[itemsep=2pt,topsep=1pt]
+\begin{enumerate}[itemsep=2pt,topsep=1pt,leftmargin=1.5cm]
     \item Epistemological limits and interpretations (\cite{electronics13020416}) - We ultimately lack understanding of a lot of things. While those `theorems' are very nice in learning theory, the real picture is that it is not real learning, for the word learning are not even defined, as such is to compare them to \textit{human learning} on itself. Even by then, theorems are severely limited. Certain voices also concern of similar problem, including \cite{lipton2016mythos,doshi2017towards,molnar2020general} (\cite{molnar2020general} shortly consider the misleading interpretation question instead), and philosophically, with several pushbacks on structural anecdotes, \cite{dreyfus1965alchemy,dreyfus1972what,dreyfus1986mind,suchman1987plans,brooks1991intelligence,searle1980minds,mccarthy1969philosophical,harnad1990symbol}. On the more modern side, of contemporary critiques, \cite{pearl2009causality,marcus2018deep,sutton2019bitter}. Of the Chinese Room Argument, perhaps we can look into already copulated passages. 
     \item Applying wrongly, and is used to impress and not to explain anything (\cite{lipton2018troublingtrendsmachinelearning}) - mathematics is used to \textit{impress} certain demographic of reviewers and readers, to provide a sense of rigours, to further enhancing the image of formal theory to the point that such theory, even if wrong, can be considered fairly correct by the sheer volume of practitioners believing in such. Such is to say the \textit{mathiness} is turning things into ideology more than rigours itself, of which we can take a tangent to see in economic theory, one of the place to adopt a large portion of machine learning statistics, the pushback against such cursed devolution (\cite{romer2015mathiness,syll2024postreal}). Such can also be seen in generally most double descent analysis, in which there exists many formalisms yet not definite result on double descent. 
     \item Reproducibility and acute false claims (\cite{kapoor2022leakage}) - In general, what we have done cannot be recreated, in certain way, and of certain too optimistic setting that is seemingly unrealistic - particularly in adoption toward practical means of actions. Certain theoretical assumptions and formulations are too stricts, of which means the increment of hypothesis fluctuation with removal of such constraints. 
@@ -339,15 +340,16 @@ Continuing, practical problems range from grokking (\cite{power2022grokking,davi
 
 \subsection{The end goal of AGI}
 
-With that said, what is the end goal of AGI? 
+With that said, what is the end goal of AGI? In all of it, the central goal is supposed to be the creation, out from the doctrine of fragmented intelligence, a unification in which we can then centralize everything in a singular artificial intelligence system, hence AGI. However, as we stated, the term AGI can be further dissected to subsets of such AGI construct, and even then, different system has different AGI threshold. Thereby, the end goal is not clarified yet. What we are seeing instead is a wave of hysteria, from people afraid of the incremental development, and the current market bubble generated from the present AI boom, all of which in turn, pushes the notion of `building AGI' further and further to the truth. Such is also amplified of the outlook to the concept of ASI, of which is sold in the general media as the next stage on which post-scarcity can be achieved, where Nobel-level researches are outputted every few days, and automation leaves human of no burdensome tasks. However, with what is being done right now, it seems like such outlook cannot be realized, at least in due time. 
 
 \clearpage
 
 \section{Future of Artificial Intelligence}
 
+
 \subsection{Neural architecture formalism}
 
-Formally, a neural architecture follows inspiration from the biological neuron in the human brain, and thus employ the philosophy of unit-based processing (\cite{Rosenblatt1958ThePA,10.5555/50066,mcculloch_logical_1943}). This implies various properties. First, they are categorized conceptually into units of processing, of which all neuron $n$ admits the structure $(I,M,O)$, of the input receiver $I$, the internal processor $M$, and the output transceiver $O$. Any neuron admitting this structure then can be constructed, combined, and fully realized at will. Conceptually, this created the \textit{typed} of the neuron architecture, in which all structures would have the same type for operations, such as composition of two neurons, $n_{1}\circ n_{2}=n_{2}(n_{1})$, in this case connected to each other by sequential move, for all neuron to have the sequential operation $n_{i}: I_{i}\times M_{i}\to O_{i}$. In practice, handling this might require more careful planning, but nevertheless the structure is particularly streamlined. Another property that is implied is the recursive structure that can be employed. Intrinsically, the admission of $(I,M,O)$ structure implies that any given structure can mutate $M$ for different purposes, for different processing and thereof, as long as $I$ and $O$ stays as immovable component of the neural structure. Then, Any nested sequence of neuron can be compressed to be a singular neuron, since the footprint of the operation $n_{1}\circ n_{2}$ is simply 
+We would argue that the neural network idea is indeed, formal and foundational, more thatn it is usually attributed of. Formally, a neural architecture follows inspiration from the biological neuron in the human brain, and thus employ the philosophy of unit-based processing (\cite{Rosenblatt1958ThePA,10.5555/50066,mcculloch_logical_1943}). This implies various properties. First, they are categorized conceptually into units of processing, of which all neuron $n$ admits the structure $(I,M,O)$, of the input receiver $I$, the internal processor $M$, and the output transceiver $O$. Any neuron admitting this structure then can be constructed, combined, and fully realized at will. Conceptually, this created the \textit{typed} of the neuron architecture, in which all structures would have the same type for operations, such as composition of two neurons, $n_{1}\circ n_{2}=n_{2}(n_{1})$, in this case connected to each other by sequential move, for all neuron to have the sequential operation $n_{i}: I_{i}\times M_{i}\to O_{i}$. In practice, handling this might require more careful planning, but nevertheless the structure is particularly streamlined. Another property that is implied is the recursive structure that can be employed. Intrinsically, the admission of $(I,M,O)$ structure implies that any given structure can mutate $M$ for different purposes, for different processing and thereof, as long as $I$ and $O$ stays as immovable component of the neural structure. Then, Any nested sequence of neuron can be compressed to be a singular neuron, since the footprint of the operation $n_{1}\circ n_{2}$ is simply 
 \begin{equation}
     n_{1}\circ n_{2}\equiv n_{3}: (I_{1},M_{1})\to O_{1} \to (I_{2},M_{2})\to O_{2} \equiv n_{3}: (I_{1},M_{3}(M_{1},M_{2}))\to O_{2} 
 \end{equation}
@@ -400,6 +402,12 @@ For a structure that is supposed to be unit-wise constructed like neural network
 \end{definition}
 
 Those definitions directly link it to type theory, while such development is perhaps more complex. In general, this specifies the \textit{type} of a particular unit using the invariant analytical typing in the general environment linking to it. This is the \textit{outer typing} of a given model construct \index{outer typing}, of which defers the type of which interaction between the environment, or the \textit{global space state} happens and what is received of such. While the ambiance space can be forgiving, such cannot be said for the typing of given structure, since it must have the correct typing for identification. The extension is then is fairly simple, but the more important notion is the equivalence of the variant $C_{ext}$ extensible unit of the inner structure itself. 
+
+While this is a prototype, it certainly focuses on the main axis of development that would be detrimental to the topic of \textit{interpretability}, capacity, analysis and so on. We can indeed, extend this particular base template of a neuron class to much greater strength, of which address partially concerns in both implementation, and analysis. Type and neuron specification classifies neuron into different \textit{class} of components instead of the mundane functional structure that we currently have, but also individualized and structuralized the \textit{connection, information} and signature aspect of a processing unit. This allows for more grounded expression and composition rule, for example, the complexity metric of individual components of a larger construction of neural network, of which then can be expressed by individual neurons, and such neuron's individual's components. Dynamics works the same, however, it will shift - instead of learning as a back-tracking process, we can express backpropagation as a kind of \textit{internal mechanism} on addition to the working framework, and the components such measures. 
+
+Furthermore, the primitive framework itself serves of a detrimental role in expressing system-wide, modelling-style and global specification of the working space. While we speak of hypothesis class $\mathcal{H}$ or $\mathcal{C}$ for example, such class can only infer, usually of specific function class, definitions, requirements, and so on. With this, we can express them both in a set-theoretical way of cardinality and field-extension similar to embedded vector space, and also encoding such as the numerical encoding typically seen in computing system, and structural addition and expression explicitly considered so. Indeed, there are problems and pitfalls, as well as the immaturity of the functional structure itself, but per a prototype, the general conceptual idea of this particular framework is fairly sound, and would be able to provide deeper insight and more sophisticated interpretation, rather than just simple neural network functions before. 
+
+\subsection{The learning theoretic}
 
 \clearpage
 
